# smol

./: .gitignore  CMakeLists.txt  README.md
src/: matrix.c  matrix.h  smol.c
test/: CMakeLists.txt  test_matrix.c
